# HefestPhyton

./: .copilot-instructions.md  .coverage  .cspell.json  .env.example  .flake8  .gitignore  .markdownlint.json  .prospector.yml  .pylintrc  .pylintrc-pyqt6  .vscodeignore  HefestWorkspace.code-workspace  LICENSE  MANIFEST.in  README.md  README_LIMPIEZA_RAIZ.md  analyze_pyright_warnings.py  analyze_warnings.py  bandit.yml  consultar_zonas_mesas.py  create_sample_mesas.py  dashboard_clean_out.txt  dashboard_integration_out.txt  debug_creacion_tarjetas.py  fix-copilot-global-config.ps1  fix-vscode-cursor-conflict.ps1  fix_tarjetas_metricas.py  main.py  metodo_alias_mejorado.py  pyproject.toml  pyright_after_cleanup.txt  pyright_after_hospederia.json  pyright_after_product_search.json  pyright_after_stubs.txt  pyright_after_tpv_avanzado.json  pyright_current_analysis.json  pyright_current_status.json  pyright_final_analysis.json  pyright_output_after_stubs.txt  pyrightconfig.json  (+6 more)
.github/: copilot-instructions.md
.github/workflows/: release.yml
assets/: README.md
backups/: 20250628_backup_mesa_widget_simple.py  README.md
build-tools/: README.md  tox.ini
config/: README.md  default.json  development.json  production.json
data/: README.md  __init__.py  db_manager.py  fix_fk_comanda_detalles.py  fix_fk_comanda_detalles.sql  hefest.db  init_db.py  inspect_productos.py  kpi_visible_metrics.json  migrar_categoria_id.py  migrar_mesaid_string_v0_0_12.py  migrar_reservas_tpv_string_v0_0_12.py  migrar_unificacion_usuarios_empleados_v0_0_14.py  recreate_comanda_detalles.py
data/backups/: README.md
development-config/: .codacy.yml  .cspell.json  .editorconfig  .flake8  .pre-commit-config.yaml  .prospector.yml  .pylintrc  README.md  bandit-results.json  flake8-results.json  mypy.ini  pylint-results.json  pyproject.dev.toml  pyright_after_inventario_service.json  pyrightconfig.json  security_analysis_fresh.json  vulture-report.txt
docker/: Dockerfile  README.md  docker-compose.yml
docs/: LIMPIEZA_ARCHIVOS_PROBLEMATICOS_COMPLETADA.md  README.md  REORGANIZACION_DEVELOPMENT_COMPLETADA.md
docs/analysis/: ESTADO_ACTUAL_SISTEMA.md  README.md  RESUMEN_PROBLEMA_TENDENCIAS.md
docs/archive/: COPILOT_INSTRUCTIONS_DUPLICADO.md  DASHBOARD_ACCESS_RESOLUTION.md  ESTADO_FINAL_TPV_CORREGIDO.md  PLAN_LIMPIEZA_RAIZ.md  README.md  README.original.bak.md  README.sintetizado.md  RESUMEN_ERRORES_SOLUCIONADOS_FINAL.md  RESUMEN_FINAL_ESTADISTICAS_COMPACTAS.md  RESUMEN_MIGRACION_ESTADISTICAS_HEADER.md  SOLUCION_PERMISOS_DASHBOARD.md  VERIFICACION_REPOSITORIO.md  archivos_ordenados.txt
docs/changelog/: CHANGELOG.md  CHANGELOG_v0.0.13.md  README.md  RENOMBRADO_COMPONENTES_VISUALES.md  [v0.0.10]_CHANGELOG.md  [v0.0.11]_CHANGELOG.md  [v0.0.12]_CHANGELOG.md  [v0.0.12]_CHANGELOG_TESTS_MIGRACION_COMPLETADA.md  [v0.0.13]_CHANGELOG.md  [v0.0.14]_CHANGELOG.md  (+12 more)
logs_debug/: README.md  [v0.0.12]_LOGS_DEBUG_README_ACTIVO.md  [v0.0.13]_LOGS_DEBUG_README_ACTIVO.md
scripts/: README.md  auditoria_comanda_detalles.sql  auto_release.py  build_exe.py  clean_vscode_performance.ps1  complete_initial_reset.py  create_version_backup_professional.ps1  fix_admin_pin.py  installer.py  installer_fixed.py  quality_analysis.py  reset_to_initial_state.py  verificar_datos_temp.py
src/: __init__.py  __version__.py  hefest_application.py
tests/: README.md  __init__.py
version-backups/: README.md
(+559 files in other folders)
